# rustime

./: Cargo.toml  README.md  README.org  planning.org
src/: ascii_art.rs  cli.rs  clock.rs  db.rs  lib.rs  main.rs  num_to_ascii.rs  session_manager.rs
src/db/: db.rs
src/services/: ascii_art.rs  clock.rs  discord_presence.rs  mod.rs
