[package]
name = "rustime"
version = "0.1.4"
edition = "2021"
authors =["arjunomray <arjunomray@gmail.com>"] 
description = "A pomodoro time in rust"
readme = "README.md"
repository = "https://github.com/arjunomray/rustime"
keywords = ["cli", "pomodoro", "productivity"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
dirs = "6.0.0"
notify-rust = "4.6.0"
rusqlite = "0.34.0"
